--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,14 @@ a{
   text-decoration: none;
   color: #333;
 }
+.container{
+  max-width: 1200px;
+  margin:auto;
+  padding: 0 15px;
+}
+.btn{
+  background: #444;
+  padding: 15px;
+  display: inline-block;
+  color: #fff;
+}
